pamc/src/tests/sample_code/should_succeed/multi_file/no_warnings/alternate_name/src/ops.ph
pub use super.Blat as Gnat;

pub let plus = fun plus(-a: Gnat, b: Gnat): Gnat {
    match a {
        .O => b,
        .S(a') => Gnat.S(plus(a', b)),
    }
};
