pamc/src/tests/sample_code/should_fail/variant_return_type/complex_expression.ph
type U {
    .U: U,
}

type Foo {
    .Bar(a: U): match U.U { .U => Foo },
}
